feat: Enhance micro benchmark performance metrics and update thresholds
- Updated `micro_bench_perf.py` to include explanation timings for both factual and alternative explanations, allowing benchmarking of current and legacy explain paths.
- Modified `check_perf_micro.py` to validate new explanation metrics against performance thresholds, ensuring comprehensive regression checks.
- Adjusted `perf_thresholds.json` to include new thresholds for explanation timings.
- Added new baseline and micro benchmark JSON files to reflect updated performance metrics.
- Enhanced documentation in `README.md` to clarify usage of the updated benchmarking scripts.

--- a/.github/workflows/update_baseline.yml
+++ b/.github/workflows/update_baseline.yml
@@ -38,7 +38,7 @@ jobs:
           DATE_TAG=$(date -u +%Y%m%d)
           # API baseline collection not automated here; keep previous behavior minimal
           # Save micro benchmarks for perf guard
-          python scripts/micro_bench_perf.py > benchmarks/micro_${DATE_TAG}.json
+          python scripts/micro_bench_perf.py --explain-backend legacy > benchmarks/micro_${DATE_TAG}.json
           echo "date_tag=$DATE_TAG" >> $GITHUB_OUTPUT
 
       - name: Micro baseline diff vs current committed baseline
