--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,9 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
+        exclude: \.ipynb$
       - id: ruff-format
+        exclude: \.ipynb$
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.9
