--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ catboost_info/catboost_training.json
 catboost_info/time_left.tsv
 catboost_info/learn_error.tsv
 catboost_info/learn/events.out.tfevents
+improvement_docs/ignore/*
