--- a/pytest.ini
+++ b/pytest.ini
@@ -16,5 +16,11 @@ filterwarnings =
     ignore::UserWarning
     # Intentional deprecation emitted by the library during transition - allow in tests
     ignore:The legacy module 'calibrated_explanations.core' is deprecated; import from the 'calibrated_explanations.core' package instead.:DeprecationWarning
+    # Phase 0 extraction: Backward compatibility shims for helper functions (temporary during v0.10.0 refactoring)
+    ignore:_read_pyproject_section is deprecated.*:DeprecationWarning
+    ignore:_split_csv is deprecated.*:DeprecationWarning
+    ignore:_coerce_string_tuple is deprecated.*:DeprecationWarning
+    ignore:_assign_weight_scalar is deprecated.*:DeprecationWarning
+    ignore:_feature_task is deprecated.*:DeprecationWarning
     # fontTools py23 module deprecation - third-party library issue
     ignore:The py23 module has been deprecated:DeprecationWarning:fontTools.misc.py23
