Refactor documentation and tests to remove phase references and improve clarity.
- Update pytest.ini to add platform_dependent marker.
- Simplify docstrings across multiple modules by removing phase-specific language.
- Enhance tests with semantic assertions and platform compatibility considerations.
- Refactor test descriptions to focus on functionality rather than implementation details.

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ markers =
     slow: marks tests as slow (can be skipped in FAST_TESTS)
     viz: marks visualization tests (optional extras)
     viz_render: marks tests that call matplotlib_adapter.render() (may fail with coverage due to lazy loading conflicts per ADR-023)
+    platform_dependent: marks tests that depend on platform-specific behavior (paths, system calls, etc.)
 filterwarnings =
     error::DeprecationWarning
     error::PendingDeprecationWarning
