--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,6 +77,35 @@ jobs:
       - name: Run core test subset (skip viz)
         run: pytest -q -k "not viz"
 
+  viz-only:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+
+      - name: Install dependencies with viz extras
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install .[viz]
+          pip install pytest pytest-cov
+
+      - name: Run visualization tests
+        run: pytest -m viz --cov=src/calibrated_explanations --cov-report=xml --cov-report=term
+
+      - name: Upload viz coverage to Codecov
+        uses: codecov/codecov-action@v5.5.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.xml
+          flags: viz
+
   perf-guard:
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
