--- a/docs/requirements-doc.txt
+++ b/docs/requirements-doc.txt
@@ -7,6 +7,7 @@ nbsphinx==0.9.4
 numpy >= 1.20
 numpydoc
 pytest
+pytest-cov
 pydata_sphinx_theme==0.15.4
 furo==2024.8.6
 sphinxcontrib-mermaid==0.9.2
