--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
           # Install minimal runtime deps explicitly. Matplotlib is required at import-time
           # by some core modules (it only supplies the visualization backend), so include it
           # while still omitting other optional viz extras (like lime/ipython).
-          pip install numpy pandas scikit-learn "crepes>=0.7.1,<0.9" "venn-abers>=1.4.1" matplotlib pytest
+          pip install numpy pandas scikit-learn "crepes>=0.7.1,<0.9" "venn-abers>=1.4.1" matplotlib pytest pytest-cov
 
       - name: Run core test subset (skip viz)
         run: pytest -q -k "not viz"
