feat: Update deprecation warnings and adjust import paths for ADR-001 compliance

--- a/pytest.ini
+++ b/pytest.ini
@@ -18,6 +18,9 @@ filterwarnings =
     ignore::UserWarning
     # Intentional deprecation emitted by the library during transition - allow in tests
     ignore:The legacy module 'calibrated_explanations.core' is deprecated; import from the 'calibrated_explanations.core' package instead.:DeprecationWarning
+    # ADR-001: Public API narrowing - namespace relocation deprecation warnings (v0.11.0+ removal)
+    ignore:The 'calibrated_explanations.perf' module is deprecated.*:DeprecationWarning
+    ignore:Importing from 'calibrated_explanations.core.calibration' is deprecated.*:DeprecationWarning
     # Phase 0 extraction: Backward compatibility shims for helper functions (temporary during v0.10.0 refactoring)
     ignore:_read_pyproject_section is deprecated.*:DeprecationWarning
     ignore:_split_csv is deprecated.*:DeprecationWarning
