--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ authors = [
   { name="Tuwe Löfström", email="tuwe.lofstrom@ju.se" },
 ]
 dependencies = [
+  'cachetools',
+  'pympler',
   'crepes',
   'venn-abers',
   'ipython',
