feat: Enhance ADR-001 boundary enforcement with new checks and documentation

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,3 +31,6 @@ jobs:
       - name: Docstring coverage report
         run: |
           python scripts/check_docstring_coverage.py --fail-under 94.0
+      - name: ADR-001 Boundary Check
+        run: |
+          python scripts/check_import_graph.py
