feat: Add pyyaml dependency and enhance deepcopy handling in CalibratedExplainer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   'numpy',
   'pandas',
   'scikit-learn',
+  'pyyaml',
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
