docs: add local CI pre-check note (make ci-local & run_ci_locally.py)

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,5 @@ catboost_info/time_left.tsv
 catboost_info/learn_error.tsv
 catboost_info/learn/events.out.tfevents
 improvement_docs/ignore/*
+reports/ci_local_summary.json
+perf_diff.txt
