--- a/.github/workflows/deprecation-check.yml
+++ b/.github/workflows/deprecation-check.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -c "import pathlib, subprocess, sys; req = pathlib.Path('requirements.txt'); subprocess.run([sys.executable, '-m', 'pip', 'install', '-r', str(req)], check=True) if req.exists() else None"
 
       - name: Run deprecation-sensitive tests
         env:
