--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,5 @@ catboost_info/learn/events.out.tfevents
 improvement_docs/ignore/*
 reports/ci_local_summary.json
 perf_diff.txt
+micro_current.json
+benchmarks/micro_.json
