--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,3 +34,6 @@ jobs:
       - name: ADR-001 Boundary Check
         run: |
           python scripts/check_import_graph.py
+      - name: ADR-002 Compliance Check
+        run: |
+          python scripts/check_adr002_compliance.py
