Enhance testing framework with fallback control and validation
- Introduced `fallback_control.py` to manage fallback behavior in tests, ensuring that fallback chains are disabled by default and can be selectively enabled for specific tests.
- Updated various test cases across the codebase to utilize the new `enable_fallbacks` fixture, allowing for explicit validation of fallback behavior.
- Removed deprecated tests related to feature-parallel execution strategies, ensuring tests focus on instance-parallel behavior.
- Added comprehensive tests to enforce fallback chain policies, including checks for warning emissions and environment variable states.
- Enhanced plotting tests to validate fallback behavior when rendering fails, ensuring robust visualization functionality.
- Improved warning handling in tests to ensure that fallback warnings are correctly captured and asserted.

This commit strengthens the testing framework by enforcing fallback policies and ensuring that tests accurately reflect the intended behavior of the system under various conditions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,11 @@ filterwarnings = [
     "error::DeprecationWarning",
     "error::PendingDeprecationWarning",
     "error::FutureWarning",
+    # Enforce fallback chain policy: treat UserWarnings containing "fall...back" as errors
+    # Tests that explicitly validate fallback behavior must use the enable_fallbacks fixture
+    # Matches variations like "falling back", "fall back", and "fallback"
+    "error:.*fall.*back.*:UserWarning",
+    # Allow other UserWarnings (but they'll be visible in test output)
     "ignore::UserWarning",
     "ignore:The legacy module 'calibrated_explanations.core' is deprecated; import from the 'calibrated_explanations.core' package instead.:DeprecationWarning",
     "ignore:The 'calibrated_explanations.perf' module is deprecated.*:DeprecationWarning",
