feat: Add ant-pattern toolbox

--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,9 @@ docs/improvement/ignore/
 docs/improvement/adr_mending/
 docs/improvement/archived/
 .ci-env/
+.github/private_member_allowlist.json
+scripts/private_usage_report.csv
+.github/private_member_allowlist.json.bak
+unit_test_output.txt
+legacy_plotting_output.txt
+reports/private_usage_scan.csv
