anti-pattern cleanup - focus on pattern 2
- Updated test functions to use more descriptive names, removing leading underscores.
- Replaced internal method calls with public method calls in tests to ensure proper usage.
- Improved the organization of test helpers and dummy classes for better readability.
- Ensured consistent naming conventions across test files for better maintainability.
- Adjusted assertions to reflect changes in method signatures and expected behaviors.
- Enhanced test coverage for explanation and prediction functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -198,7 +198,5 @@ docs/improvement/archived/
 .ci-env/
 .github/private_member_allowlist.json
 scripts/private_usage_report.csv
-.github/private_member_allowlist.json.bak
-unit_test_output.txt
-legacy_plotting_output.txt
 reports/private_usage_scan.csv
+reports/test_anti_pattern_report.csv
