--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,11 +96,9 @@ filterwarnings = [
     # Tests that explicitly validate fallback behavior must use the enable_fallbacks fixture
     # Matches variations like "falling back", "fall back", and "fallback"
     "error:.*fall.*back.*:UserWarning",
-    # Ignore scipy.optimize deprecation warning (emitted by sklearn LogisticRegression)
-    "ignore:.*L-BFGS-B solver.*:DeprecationWarning",
-    # Ignore pyparsing deprecation warning (emitted by matplotlib)
-    "ignore:.*'parseString' deprecated - use 'parse_string'.*:DeprecationWarning",
-    "ignore:.*'resetCache' deprecated - use 'reset_cache'.*:DeprecationWarning",
+    # Ignore deprecation warnings from third-party libraries that are outside our control
+    "ignore::DeprecationWarning:pyparsing.*",
+    "ignore::DeprecationWarning:scipy.optimize.*",
     # Allow other UserWarnings (but they'll be visible in test output)
     "ignore::UserWarning",
     "ignore:numpy.ufunc size changed, may indicate binary incompatibility.*:RuntimeWarning",
