--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt -c constraints.txt
-          pip install -e . -c constraints.txt
+          pip install -e .[dev,eval,viz] -c constraints.txt
           pip install pytest pytest-cov xgboost lime shap setuptools psutil -c constraints.txt
 
       - name: Run tests with coverage
@@ -72,7 +72,7 @@ jobs:
           # Install minimal runtime deps explicitly. Matplotlib is required at import-time
           # by some core modules (it only supplies the visualization backend), so include it
           # while still omitting other optional viz extras (like lime/ipython).
-          pip install numpy pandas scikit-learn "crepes>=0.7.1,<0.9" "venn-abers>=1.4.1" matplotlib pytest pytest-cov -c constraints.txt
+          pip install numpy pandas scikit-learn "crepes>=0.7.1" "venn-abers>=1.4.1" matplotlib pytest pytest-cov -c constraints.txt
 
       - name: Run core test subset (skip viz)
         run: pytest -q -k "not viz" --no-cov
