--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-crepes >= 0.7.1, < 0.9
-ipython
-scikit-learn
+crepes >= 0.7.1
+ipython >= 8.0
+scikit-learn >= 1.3.0
 matplotlib >= 3.4
 numpy >= 1.20, < 2.3
 venn-abers >= 1.4.1
-psutil>=5.9
-pyyaml
-openpyxl
+psutil >= 5.9
+pyyaml >= 6.0
+openpyxl >= 3.0
+pandas >= 2.0
+cachetools >= 5.0
+pympler >= 1.0
+lime >= 0.2.0
