Refactor: Update private member allowlist and .gitignore; remove unused fast filtering scripts
- Updated private_member_allowlist.json to include a new reason for allow-listing.
- Added evaluation/experimental/ to .gitignore to prevent tracking of experimental results.
- Deleted unused dataset_utils.py, fast_feature_filtering_ablation_multi.py, fast_filtering_feature_overlap.py, fast_filtering_topk_sweep.py, metrics_utils.py, and setup_ablation_multi.py scripts to clean up the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ docs/improvement/archived/
 scripts/private_usage_report.csv
 reports/private_usage_scan.csv
 reports/test_anti_pattern_report.csv
+evaluation/experimental/
