Update myst_parser version constraint to allow newer versions

--- a/docs/requirements-doc.txt
+++ b/docs/requirements-doc.txt
@@ -2,7 +2,7 @@ crepes >= 0.7.1
 ipython
 scikit-learn
 matplotlib >= 3.4
-myst_parser==3.0.1
+myst_parser>=3.0.1
 nbsphinx==0.9.8
 numpy >= 1.20
 numpydoc
