--- a/docs/requirements-doc.txt
+++ b/docs/requirements-doc.txt
@@ -3,7 +3,7 @@ ipython
 scikit-learn
 matplotlib >= 3.4
 myst_parser>=3.0.1
-nbsphinx==0.9.8
+nbsphinx>=0.9.8
 numpy >= 1.20
 numpydoc
 pytest
@@ -13,6 +13,6 @@ sphinxcontrib-mermaid==1.2.3
 linkify-it-py==2.0.3
 sphinx>=8.0.0
 docutils==0.22.4
-sphinx_rtd_theme==3.0.2
+sphinx_rtd_theme
 venn-abers
 roman
