--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r docs/requirements-doc.txt -c constraints.txt
-          pip install .[notebooks,viz,lime,eval] -c constraints.txt
+          pip install .[notebooks,viz,eval] -c constraints.txt
 
       - name: Build documentation (HTML)
         run: |
