feat: ADR-010: Optional Dependency Split + Packaging Compliance
- Completed lean core installation with optional extras for visualization, notebooks, and evaluation. Core dependencies now exclude heavy packages like `ipython`, `lime`, and `matplotlib`, moved to appropriate extras (`viz`, `notebooks`, `eval`). Added pytest hook to auto-skip visualization tests when `matplotlib` is unavailable. Provided evaluation lockfiles (`evaluation/requirements.txt` and `evaluation/environment.yml`) aligned with `[eval]` extras. Updated documentation in README and CONTRIBUTING for extras usage.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,6 @@ dependencies = [
     "pympler",
     "crepes",
     "venn-abers",
-    "ipython",
-    "lime",
-    "matplotlib",
     "numpy",
     "pandas",
     "scikit-learn",
@@ -55,19 +52,41 @@ notebooks = [
     "matplotlib",
 ]
 dev = [
+    "matplotlib",
     "pytest",
     "pytest-cov",
     "ruff",
     "mypy",
-    "jsonschema",
     "pydocstyle",
     "nbqa",
+    "sphinx",
+    "myst-parser",
+    "nbsphinx",
+    "numpydoc",
+    "pydata-sphinx-theme",
+    "furo",
+    "sphinx-rtd-theme",
+    "sphinxcontrib-mermaid",
+    "docutils",
+    "roman",
+    "linkify-it-py",
+    "jsonschema",
     "tomli-w",
+    "tomli; python_version < '3.11'",
+    "prometheus-client",
+    "pyarrow",
+    "joblib",
+    "ucimlrepo",
 ]
 eval = [
     "lime",
     "shap",
     "seaborn",
+    "xgboost",
+    "scipy",
+    "joblib",
+    "ucimlrepo",
+    "matplotlib",
 ]
 external-plugins = [
     "numpy>=1.24",
