feat(logging): Introduce structured logging context and telemetry diagnostics
- Added a new logging module to manage structured logging context.
- Implemented telemetry diagnostic mode configuration from environment variables and pyproject.toml.
- Enhanced ExplanationOrchestrator to include telemetry payloads in explanations.
- Updated ExplanationRequest to freeze mutable fields for safety.
- Added tests for logging context management and telemetry payloads.
- Ensured bins and extras in ExplanationRequest are immutable.
- Integrated telemetry into explanation batch processing and logging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -310,3 +310,4 @@ exclude = [
 [tool.codespell]
 skip = "docs/_build,docs_old/_build,build,dist,tests/benchmarks,evaluation,notebooks,docs/improvement/anti_pattern_gap_analysis.ipynb"
 ignore-words-list = "dataframe,nd"
+ords-list = "dataframe,nd"
