--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,6 +88,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt -c constraints.txt
           pip install . -c constraints.txt
+          pip install jsonschema -c constraints.txt
 
       - name: Run parity reference harness for all datasets
         run: |
